--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="js/jquery.js"></script>
     <!--引用百度地图API-->
     <script type="text/javascript"
-        src="http://api.map.baidu.com/api?v=2.0&ak=QOSB48ormFcQbksB3EmQbHbw6RH4aGwS"></script>
+        src="https://api.map.baidu.com/api?v=2.0&ak=QOSB48ormFcQbksB3EmQbHbw6RH4aGwS"></script>
     <script src="./js/date.js"></script>
 </head>
 
