--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
         function createMap() {
             map = new BMap.Map("map");
-            map.centerAndZoom(new BMap.Point(140.158355, 38.077459), 15);
+            map.centerAndZoom(new BMap.Point(33.67062690540013, 130.4447392909592), 25);
         }
 
         function setMapEvent() {
